--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "user/tmp",
     "autoload": {
         "psr-4": {
-            "User\\Tmp\\": "src/",
-            "Service\\Example\\": "App/Service/",
-            "Repository\\": "App/Repository/"
+            "Service\\": "App/Service/",
+            "Repository\\": "App/Repository/",
+            "User\\": "App/Entity/User/"
         }
     },
     "authors": [
@@ -15,6 +15,8 @@
     ],
     "require": {
         "php-di/php-di": "^7.0",
-        "monolog/monolog": "^3.9"
+        "monolog/monolog": "^3.9",
+        "doctrine/dbal": "^3.0",
+        "doctrine/orm": "^3.4"
     }
 }
