--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "php-di/php-di": "^7.0",
         "doctrine/dbal": "^3.0",
         "doctrine/orm": "^3.4",
-        "php-di/slim-bridge": "^3.4"
+        "php-di/slim-bridge": "^3.4",
+        "vlucas/phpdotenv" : "^5.6"
     }
 }
