--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
             "Repository\\": "App/Repository/",
             "User\\": "App/Entity/User/",
             "Controller\\": "App/Controller/",
-            "Traits\\": "App/Traits/"
+            "Traits\\": "App/Traits/",
+            "Entity\\": "App/Entity"
         }
     },
     "authors": [
@@ -26,6 +27,12 @@
         "doctrine/dbal": "^3.0",
         "doctrine/orm": "^3.4",
         "php-di/slim-bridge": "^3.4",
-        "vlucas/phpdotenv" : "^5.6"
+        "vlucas/phpdotenv" : "^5.6",
+        "symfony/cache": "^7.3"
+    },
+
+    "scripts": {
+        "db": "php ./config/cli-config.php orm:schema-tool:update --force",
+        "proxies": "php ./config/cli-config.php orm:generate-proxies "
     }
 }
