--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,37 @@
 {
-    "name": "user/api-php-minimo",
-    "autoload": {
-        "psr-4": {
-            "Service\\": "App/Service/",
-            "Repository\\": "App/Repository/",
-            "User\\": "App/Entity/User/",
-            "Controller\\": "App/Controller/",
-            "Traits\\": "App/Traits/",
-            "Entity\\": "App/Entity"
-        }
-    },
-    "authors": [
-        {
-            "name": "Joao Pedro",
-            "email": "joaopedrord2001@gmail.com"
-        }
-    ],
-    "require": {
-        "slim/slim": "4.*",
-        "slim/psr7": "^1.7",
-        "nyholm/psr7": "^1.8",
-        "nyholm/psr7-server": "^1.1",
-        "guzzlehttp/psr7": "^2",
-        "laminas/laminas-diactoros": "^3.6",
-        "php-di/php-di": "^7.0",
-        "doctrine/dbal": "^3.0",
-        "doctrine/orm": "^3.4",
-        "php-di/slim-bridge": "^3.4",
-        "vlucas/phpdotenv" : "^5.6",
-        "symfony/cache": "^7.3"
-    },
-
-    "scripts": {
-        "db": "php ./config/cli-config.php orm:schema-tool:update --force",
-        "proxies": "php ./config/cli-config.php orm:generate-proxies "
+  "name": "user/api-php-minimo",
+  "autoload": {
+    "psr-4": {
+      "App\\": "App/",
+      "Service\\": "App/Service/",
+      "Repository\\": "App/Repository/",
+      "Controller\\": "App/Controller/",
+      "Traits\\": "App/Traits/"
     }
+  },
+  "authors": [
+    {
+      "name": "Joao Pedro",
+      "email": "joaopedrord2001@gmail.com"
+    }
+  ],
+  "require": {
+    "slim/slim": "4.*",
+    "slim/psr7": "^1.7",
+    "nyholm/psr7": "^1.8",
+    "nyholm/psr7-server": "^1.1",
+    "guzzlehttp/psr7": "^2",
+    "laminas/laminas-diactoros": "^3.6",
+    "php-di/php-di": "^7.0",
+    "doctrine/dbal": "^3.0",
+    "doctrine/orm": "^3.4",
+    "php-di/slim-bridge": "^3.4",
+    "vlucas/phpdotenv": "^5.6",
+    "symfony/cache": "^7.3",
+    "tuupola/cors-middleware": "^1.5"
+  },
+  "scripts": {
+    "db": "php ./config/cli-config.php orm:schema-tool:update --force",
+    "proxies": "php ./config/cli-config.php orm:generate-proxies"
+  }
 }
